bug: fix for invitations icons not loading and wrong handling after accept on ios devices

--- a/frontend/src/assets/index.css
+++ b/frontend/src/assets/index.css
@@ -785,3 +785,7 @@ button.text-red-500 {
   font-size: 0.85em;
   padding: 4px 8px;
 }
+
+.btn-black{
+  color: black;
+}
